codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_retry_prompt.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  Additional safety checks
  This request requires additional safety checks, which can take extra time.
  You can retry with a faster model for a quicker response, though it may be
  less capable of handling complex requests.

› 1. Retry with a faster model
  2. Keep waiting

  Press enter to confirm or esc to go back
