codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 135
expression: popup
---
▌ Rename thread
▌
▌ Current project title

Press enter to confirm or esc to go back
